--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "body-parser": "^1.15.2",
     "cors": "^2.7.1",
     "express": "^4.14.0",
-    "express-session": "^1.14.0"
+    "express-session": "^1.14.0",
+    "lodash": "^4.13.1"
   }
 }
